// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableButtons renders if no props given 1`] = `
<div
  class="btn-toolbar"
  role="toolbar"
  style="display: flex; justify-content: center;"
>
  <button
    class="btn btn-sm btn-warning"
    type="button"
  >
    <i
      class="glyphicon glyphicon-pencil"
    />
  </button>
  <button
    class="btn btn-sm btn-danger"
    type="button"
  >
    <i
      class="glyphicon glyphicon-trash"
    />
  </button>
</div>
`;

exports[`TableButtons renders only delete button 1`] = `
<div
  class="btn-toolbar"
  role="toolbar"
  style="display: flex; justify-content: center;"
>
  <button
    class="btn btn-sm btn-danger"
    type="button"
  >
    <i
      class="glyphicon glyphicon-trash"
    />
  </button>
</div>
`;

exports[`TableButtons renders only edit button 1`] = `
<div
  class="btn-toolbar"
  role="toolbar"
  style="display: flex; justify-content: center;"
>
  <button
    class="btn btn-sm btn-warning"
    type="button"
  >
    <i
      class="glyphicon glyphicon-pencil"
    />
  </button>
</div>
`;
